fix clickable and selectable styles to prevent jumpy

--- a/front-end/src/components-collin/layout/card/ColCard.scss
+++ b/front-end/src/components-collin/layout/card/ColCard.scss
@@ -5,5 +5,5 @@
 	border-radius: 2px;
 	overflow: hidden;
 	background-color: whitesmoke;
-	@include clickable(whitesmoke);
+	@include clickable(whitesmoke, 1px);
 }
