--- a/front-end/src/components/layout/header/Header.scss
+++ b/front-end/src/components/layout/header/Header.scss
@@ -1,4 +1,5 @@
 @import "../../../styles/shared/variables";
+@import "../../../components-collin/styles/effects";
 
 .header {
 	background-color: whitesmoke;
@@ -13,6 +14,9 @@
 		color: $primary-color;
 		font-family: $primary-font;
 		text-align: center;
+
+		@include clickable($primary-color, .5px);
+		@include selectable($primary-color, .5px);
 	}
 }
 
