--- a/front-end/src/components/links/page-links/PageLinks.scss
+++ b/front-end/src/components/links/page-links/PageLinks.scss
@@ -14,7 +14,7 @@
     justify-content: center;
 	
 	&__link {
-		@include selectable;
+		@include selectable($primary-color, .5px);
 
 		&.selectable {
 			width: 100%;
